--- a/SitePrototipo.html
+++ b/SitePrototipo.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id = "div1">
-         <h1 class="Subtitulo1">Lendas do Brasil</h1>
+         <h1 class="Subtitulo1">folclore do Brasil</h1>
          <h6 class="Botao">Login/Se inscreva</h6>
     </div>
     <div id="div2">
